# opastro

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml
data/rules/: default_rules.json
docs/: 01-quickstart.md  02-api-reference.md  03-request-response-contract.md  04-architecture.md  05-rendering-system.md  06-content-pipeline.md  07-operations-and-env.md  08-development-and-testing.md  09-troubleshooting.md  10-factor-drivers-reference.md  11-editorial-style-guide.md  12-personalization-playbook.md  13-cli-ux-roadmap.md  13-docker-deployment.md  README.md
src/horoscope_engine/: __init__.py  aggregation.py  api.py  cache.py  cache_keys.py  cli.py  config.py  content_repository.py  ephemeris.py  ephemeris_downloader.py  generation_preflight.py  healthcheck.py  middleware.py  models.py  natal_artifacts.py  observability.py  pregen.py  profiles.py  scene_renderer.py  service.py  versioning.py
src/horoscope_engine/data/: __init__.py
src/horoscope_engine/interpretation/: __init__.py  renderer.py  rules.py
src/opastro/: __init__.py  __main__.py
tests/: test_cli.py
