[metadata]
name = opastro-engine
version = 0.1.0
description = Open-source horoscope calculation engine with lightweight interpretations.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.104.0
    httpx>=0.25.0
    pydantic>=2.4.0
    pyswisseph>=2.10.3
    python-multipart>=0.0.6
    redis>=5.0.0
    uvicorn[standard]>=0.24.0
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
horoscope_engine = data/*.json

[options.extras_require]
dev =
    pytest>=8.0.0

[options.entry_points]
console_scripts =
    opastro = horoscope_engine.cli:main
