[metadata]
name = opastro
version = 0.1.1
description = Open-source astrology engine for developers: CLI, API, Swiss Ephemeris, and explainable horoscope generation.
long_description = file: README.md
long_description_content_type = text/markdown
author = Dakidarts®
url = https://github.com/dakidarts/opastro
license = MIT
project_urls =
    Homepage = https://dakidarts.com
    Source = https://github.com/dakidarts/opastro
    Documentation = https://github.com/dakidarts/opastro/tree/main/docs
    Premium API = https://numerologyapi.com
keywords =
    astrology
    horoscope
    numerologyapi
    cli
    fastapi
    ephemeris
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    cairosvg>=2.7.1
    fastapi>=0.104.0
    httpx>=0.25.0
    pydantic>=2.4.0
    pyswisseph>=2.10.3
    python-multipart>=0.0.6
    redis>=5.0.0
    reportlab>=4.1.0
    uvicorn[standard]>=0.24.0
include_package_data = False

[options.packages.find]
where = src

[options.package_data]
horoscope_engine = data/*.json

[options.extras_require]
dev =
    pytest>=8.0.0

[options.entry_points]
console_scripts =
    opastro = horoscope_engine.cli:main
